--- a/index.html
+++ b/index.html
@@ -4,16 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CO₂ Monitor</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="./styles.css">
 </head>
-<body>
+<body class="bg-black" style="font-family: 'Arial', sans-serif">
+
     <header>
-        <img src="./images/logo_weiss.png" alt="logo">
-        <nav>
-            <ul>
-                <li><a href="#table">CO₂ Emissionsdaten</a></li>
-                <li><a href="#about">Über uns</a></li>
-                <li><a href="#contact">Kontakt</a></li>
-            </ul>
+        <nav class="navbar navbar-expand-lg container navbar bg-black border-bottom border-body" data-bs-theme="dark">
+            <a class="navbar-brand" href="#index">
+                <img src="./images/logo_weiss.png" alt="logo">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#table">CO₂ Emissionsdaten</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#about">Über uns</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#contact">Kontakt</a>
+                    </li>
+                </ul>
+            </div>
         </nav>
     </header>
 
@@ -36,7 +53,6 @@
             <!--Suchfeld-->
             <input type="text" id="searchInput" placeholder="Suchbegriff eingeben" onkeyup="searchFunction()">
 
-            <!--TODO Filter ignorieren sich gegenseitig-->
             <!--Filter für Länder-->
             <label for="countryFilter">Land</label>
             <select name="countryFilter" id="countryFilter" onchange="filterAll()">
@@ -238,5 +254,6 @@
         <a href="impressum.html">Impressum</a>
         <a href="nutzungsbedingungen.html">Nutzungsbedingungen</a>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
