--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-lg container navbar bg-black border-bottom border-body" data-bs-theme="dark">
             <a class="navbar-brand" href="#index">
-                <img src="./images/logo_weiss.png" alt="logo">
+                <img src="./images/logo_weiss.png" class="img-fluid" alt="logo">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,11 +35,14 @@
     </header>
 
     <main>
-        <section id="home">
-            <img src="./images/michael-milverton-Le4yqbCMoJo-unsplash.jpg" alt="hintergrundbild">
-            <h1>CO₂ EMISSIONS DATEN</h1>
+        <section id="home" class="container-fluid">
+            <h1>CO₂</h1>
+            <h1>EMISSIONS</h1>
+            <h1>DATEN</h1>
             <h3>Transparenz für den Klimawandel</h3>
-            <button><img src="./images/arrow_down_white.png" alt="scroll down"></button>
+            <div class="button-wrapper">
+                <a href="#intro"><button class="btn btn-dark"><img src="./images/arrow_down_white.png" alt="scroll down"></button></a>
+            </div>
         </section>
 
         <section id="intro">
@@ -216,7 +219,7 @@
 
         <section id="about">
             <h3>Über uns</h3>
-            <img src="./images/photo-nic-RmZIUIF2S2Q-unsplash.jpg" alt="landscape image snowy forest">
+            <img src="./images/photo-nic-RmZIUIF2S2Q-unsplash.jpg" class="img-fluid" alt="landscape image snowy forest">
             <p>CO₂Monitor ist eine unabhängige Non-Profit-Organisation, die sich für mehr Transparenz bei CO₂-Emissionen einsetzt. Der Klimawandel ist eine der größten Herausforderungen unserer Zeit, doch oft fehlt es an klaren und zugänglichen Informationen darüber, welche Länder und Unternehmen wie viel CO₂ ausstoßen. Genau hier setzt CO₂Monitor an: Unsere Plattform stellt umfassende und verlässliche Daten bereit, die es ermöglichen, Emissionen gezielt zu analysieren und nachzuvollziehen. Durch interaktive Visualisierungen, Filtermöglichkeiten und Vergleichsfunktionen bieten wir eine transparente Grundlage für Wissenschaftler, Aktivisten, Unternehmen und politische Entscheidungsträger. Unser Ziel ist es, das Bewusstsein für klimaschädliche Emissionen zu schärfen und den Wandel hin zu nachhaltigeren Wirtschafts- und Lebensweisen aktiv zu fördern. Wir glauben, dass Wissen der erste Schritt zur Veränderung ist – deshalb setzen wir auf offene Daten, verständliche Aufbereitung und eine benutzerfreundliche Plattform, die es jedem ermöglicht, sich mit den realen Zahlen und Fakten des Klimawandels auseinanderzusetzen.</p>
         </section>
 
@@ -237,12 +240,12 @@
 
                 <button type="submit">Senden</button>
             </form>
-            <img src="./images/chris-lutke-VMJGmTuRVFs-unsplash.jpg" alt="landscape image snowy mountain">
+            <img src="./images/chris-lutke-VMJGmTuRVFs-unsplash.jpg" class="img-fluid" alt="landscape image snowy mountain">
         </section>
     </main>
 
     <footer>
-        <img src="./images/logo_weiss.png" alt="logo">
+        <img src="./images/logo_weiss.png" class="img-fluid" alt="logo">
         <p>E-Mail: co2-monitor@gmail.com</p>
         <p>Telefon: +49 123 4567890</p>
 
