--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles_2.css">
 </head>
-<body class="bg-black" style="font-family: 'Arial', sans-serif">
+<body class="bg-black">
 
     <main class="gridContainer">
         <header id="header">
@@ -44,8 +44,8 @@
                 <h3>Transparenz für den Klimawandel</h3>
                 <div class="button-wrapper">
                   <a href="#intro" class="scroll-down-link">
-                    <button class="btn btn-dark scroll-down-button">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-down"><polyline points="6 9 12 15 18 9"></polyline></svg>
+                    <button class="btn btn-dark btn-lg">
+                      <img src="./images/arrow_down_white.png" alt="scroll down arrow button">
                     </button>
                   </a>
                 </div>
